# sfml-snake

./: .gitattributes  .gitignore  CMakeLists.txt  build.sh  config.cfg  main.cpp
include/: Food.h  Snake.h
src/: Food.cpp  Snake.cpp
